--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ ext {
 }
 
 dependencies {
+	compile('org.springframework.boot:spring-boot-starter-data-elasticsearch')
+	compile("com.sun.jna:jna:$jnaVersion")
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")
 	compile("com.kingboy:common:$commonVersion")
